some modified code

--- a/background_image.html
+++ b/background_image.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="stylesheet/backgroundimage.css">
 </head>
 <body>
-    <div class="div">
+    <section style="width: 100%; height: 1000px; border: 1px solid red;">
 
-    </div>
+        <div>
+    
+        </div>
+
+    </section>
 </body>
 </html>
