--- a/inline_css.html
+++ b/inline_css.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>inline css</title>
+    
 </head>
 <body>
     <p>
-        Shivaji established <span style="color: blueviolet;">a royal name for himself in history with his administrative skills</span> by upholding the Swarajya values and the Maratha heritage. He was known for his bravery and tactics with which he won numerous wars against the Mughals.
+        Shivaji established <span style="color: red; background-color: black;">a royal name for himself in history with his administrative skills</span> by upholding the Swarajya values and the Maratha heritage. He was known for his bravery and tactics with which he won numerous wars against the Mughals.
     </p>
 </body>
 </html>
