--- a/internal_css.html
+++ b/internal_css.html
@@ -14,7 +14,8 @@
 </head>
 <body>
     <p class="p">
-        Shivaji established a royal name for himself in history with his administrative skills by upholding the Swarajya values and the Maratha heritage. He was known for his bravery and tactics with which he won numerous wars against the Mughals.
+        Shivaji established 
+        <span style="background-color: black; color: white;"> a royal name for himself  </span>in history with his administrative skills by upholding the Swarajya values and the Maratha heritage. He was known for his bravery and tactics with which he won numerous wars against the Mughals.
     </p>
 </body>
 </html>
