--- a/navbar.html
+++ b/navbar.html
@@ -13,12 +13,12 @@
             opacity: 1;
         }
         .navbar{
-            opacity: 0.8;
-            border: 10px solid black;
+            /* opacity: 0.8; */
+            border: 10px solid red  ;
             width: 97%;
             height: 80px;
             padding-top: 50px;
-            border-radius: 20px;
+            border-radius: 100px;
             list-style: none;
             background-color: blanchedalmond;
             
@@ -27,7 +27,7 @@
         }
 
         .navbar li{
-            opacity: 1;
+            /* opacity: 1; */
             color: red;
         }
 
@@ -57,8 +57,7 @@
 </head>
 <body class="a">
     <div>
-        <table>
-            <tr>
+  
                 <ul class="navbar">
                     <li>Home</li>
                     <li>Carrer</li>
@@ -68,8 +67,7 @@
                         <input type="search" name="search" id="search" placeholder="Search here!!"> 
                      </div>
                 </ul>
-            </tr>
-        </table>
+
 
     </div>
 </body>
