--- a/positions.html
+++ b/positions.html
@@ -23,38 +23,46 @@
                 
             }
 
-            #a:hover{ width: 300px;
+            /* #a:hover{ width: 300px;
                 height: 300px;
                 transition: 5s;
 
-            }
+            } */
 
             #b{
                 position: fixed;
                 bottom: 40px;
-                right: 10px;
+                /* right: 10px; */
             }
 
             #c{
                 position: relative;
                 top: 10px;
                 left: 40px;
+                /* bottom: 50px; */
+                /* right: 200px; */
             }
 
             #d{
                 position: absolute;
             }
 
+            #a{
+                position: absolute;
+                background-color: yellow;
+            }
 
     </style>
 </head>
 <body>
     <div class="container">
-    <div class="box" id="a"></div>
-    <div class="box" id="c"></div>
-    <div class="box" id="a"></div>
-    <div class="box" id="b" ></div>
-    <div class="box" id="d"></div>
+        <!-- <div class="box" id="a">a</div> -->
+        <div class="box" id="c">c</div>
+
+
+        <div class="box" id="a">a</div>
+        <div class="box" id="b" >b</div>
+        <div class="box" id="d">d</div>
     </div>      
 </body>
 </html>
