--- a/selector.html
+++ b/selector.html
@@ -9,10 +9,18 @@
 </head>
 <body>
     <h1>Welcome!</h1>
+
+    
     <div id="a">What was Maharana Pratap known for?
         Pratap Singh I, also known as Maharana Pratap,   </div>
+
+
     <div class="b">was the 13th king of Mewar, which is now part of the state of Rajasthan in northwestern India.</div>
-    <div>He was recognised for his role in the Battle of Haldighati and Battle of</div>
+
+
+    <div>He was recognised for his role in the Battle of Haldighati and Battle of</div>.
+
+
     <p>Dewair and was dubbed "Mewari Rana" for his military resistance to the Mughal Empire's expansionism</p>
    
 </body>
