--- a/stair_Cases_position_change.html
+++ b/stair_Cases_position_change.html
@@ -21,7 +21,7 @@
             animation-duration: 10s;
             animation-iteration-count: infinite;
             position: relative;
-            animation-direction: alternate-reverse;
+            animation-direction:normal;
 
         }
         @keyframes size{
