--- a/flex.html
+++ b/flex.html
@@ -8,13 +8,13 @@
     <style>
         .a{
             border: 2px solid red;
-            display: flex;
-            flex-wrap: wrap;                 
-                                                                            /* ------(wrap used  for adject item on wrap or reverse-wrap) */
-            
-            justify-content: center;
             height: 500px;
-            align-items: center;
+            display: flex;
+            flex-wrap: wrap;  
+   /* ------(wrap used  for adject item on wrap or reverse-wrap) */
+            
+            justify-content: center; 
+            align-items: center;    
         }
         #b{
             border: 2px solid pink;
@@ -32,7 +32,7 @@
         }
 
         .d{
-            flex-grow: 3;
+            /* flex-grow: 3; */
             /* flex-shrink: 3; */
         }
     </style>
