--- a/overflow.html
+++ b/overflow.html
@@ -9,8 +9,13 @@
     <style>
         div {
             overflow: auto;
+            /* overflow-x: hidden; */
+            /* overflow-y: hidden; */
             border: 2px solid red;
-            height: 700px;
+            height: 200px;
+        }
+        p{
+            padding: 20px;
         }
     </style>
 </head>
