--- a/transform_animation.html
+++ b/transform_animation.html
@@ -20,14 +20,15 @@
             height: 100px;
             background-color: green;
             position: relative;
-            transition: 2s;
+            transition-duration: 5s;
         }
         .b:hover{
-            /* transform: rotate(360deg);*/  
+            /* transform: rotate(360deg);   */
             /* transform: scale(3); */
-            /* transform: skew(90deg); */
-            /* transform: translate(120px); */
-            /* transform: translate(120px,120px); */
+            /* transform: skewY(90deg); */
+            /* transform: translateY(120px); */
+            /* transform: translate(120px,120px) ; */
+            
         }
     </style>
 </head>
